# sweetnothings

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
sweetnothings/: ai.py  sweetnothings.py  video.py
