[tool.poetry]
name = "sweetnothings"
version = "0.0.1"
description = "AI generated subtitles"
authors = ["pyamsoft <developer.pyamsoft@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "==2.32.3"
av = "==12.3.0"
stable-ts = "==1.4.0"
faster-whisper = "==1.0.3"
torch = "==2.4.0"

[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = "==24.4.2" }
setuptools = "==71.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
